--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,4 @@
-body {
+ body {
   margin: 20px;
   padding: 0;
   font-family: 'Open Sans', sans-serif;
@@ -7,6 +7,7 @@ body {
 header, nav, main {
   display: flex;
   flex-direction: column;
+  text-align: left;
 }
 
 p {
@@ -21,16 +22,20 @@ a {
 .about_text {
   border-left: 2px solid black;
   padding-left: 10px;
+  color: #69696a;
 }
 
 .button {
-  background-color: blue;
+  background-color: black;
   padding: 5px;
   border-radius: 10px;
   text-align: center;
   color: white;
 }
 
+main {
+  padding: 50px;
+}
 footer {
   display: flex;
   flex-direction: column;
@@ -40,26 +45,29 @@ footer {
   .circle1 {
     width: 100px;
     height: 100px;
-    background-color: red;
+    background-color: #cf82d5;
     border-radius: 50%;
-    position:  absolute;
-    right: 0;
-    top: 40px;
+    position: absolute;
+    right: 30px;
+    top: 50px;
   }
   .circle2 {
     width: 150px;
     height: 150px;
-    background-color: blue;
+    background-color: #f7c1a2;
     border-radius: 50%;
-    position:  absolute;
-    right: 50px;
-    top: 40px;
+    position: absolute;
+    right: 10px;
+    top: 120px;
   }
   .circle3 {
     width: 200px;
     height: 200px;
-    background-color: green;
+    background-color:#f788a7;
     border-radius: 50%;
+    position: absolute;
+    right: 90px;
+    top: 40px;
   }
 
   header, nav {
